[gd_scene load_steps=7 format=3 uid="uid://clfma2tljhmt0"]

[ext_resource type="Script" uid="uid://ci803xwaqdqit" path="res://ScriptsAndResources/Battle/Player/player.gd" id="1_v0iea"]
[ext_resource type="Script" uid="uid://cik5i53t3ytv3" path="res://ScriptsAndResources/Battle/CircularMenuAndActions/CircularMenu/circular_menu.gd" id="2_cvnsp"]
[ext_resource type="Script" uid="uid://ccmaqpl307uum" path="res://ScriptsAndResources/Battle/CircularMenuAndActions/ActionPool/action_pool_manager.gd" id="4_x3wgy"]
[ext_resource type="Resource" uid="uid://bt1ef2sbogswx" path="res://ScriptsAndResources/Battle/CircularMenuAndActions/ActionPool/base_action_pool.tres" id="5_3smsa"]
[ext_resource type="Texture2D" uid="uid://d1o5m3t1tgy8e" path="res://Assets/TestIcons/icon.svg" id="5_fkybt"]

[sub_resource type="LabelSettings" id="LabelSettings_fkybt"]

[node name="Player" type="Node2D" groups=["player"]]
script = ExtResource("1_v0iea")

[node name="CircularMenu" type="Node2D" parent="." node_paths=PackedStringArray("pool_manager")]
script = ExtResource("2_cvnsp")
pool_manager = NodePath("ActionPoolManager")
metadata/_custom_type_script = "uid://cik5i53t3ytv3"

[node name="ActionPoolManager" type="Node" parent="CircularMenu"]
script = ExtResource("4_x3wgy")
base_pool = ExtResource("5_3smsa")
metadata/_custom_type_script = "uid://ccmaqpl307uum"

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("5_fkybt")

[node name="HealthBar" type="Node2D" parent="."]
position = Vector2(0, -100)

[node name="ProgressBar" type="ProgressBar" parent="HealthBar"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -10.0
offset_right = 50.0
offset_bottom = 10.0
grow_horizontal = 2
grow_vertical = 2
show_percentage = false

[node name="Label" type="Label" parent="HealthBar"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
label_settings = SubResource("LabelSettings_fkybt")
horizontal_alignment = 1
vertical_alignment = 1
